# PACIFICO

GATT_BLE_TEST/: CMakeLists.txt  sdkconfig
GATT_SERV_01/: CMakeLists.txt  sdkconfig  sdkconfig.old
IR_CONTROL/: CMakeLists.txt  sdkconfig  sdkconfig.old
IR_CONTROL/main/: CMakeLists.txt  ir_nec_transceiver_main.c  main.c
IR_CONTROL/main/ble_serv/: ble_main.c  ble_main.h  bleprph.h  gatt_svr.c
IR_CONTROL/main/ir_nec/: ir_nec_main.c  ir_nec_main.h
IR_control_protocols/: CMakeLists.txt
NIMBLE_SERV_OTA/: CMakeLists.txt
Nimble_BHR/: CMakeLists.txt  sdkconfig
Nimble_BHR/main/: main.c
Nimble_cent/: CMakeLists.txt  sdkconfig  sdkconfig.old
POWER_BLE_CONN/: CMakeLists.txt  sdkconfig  sdkconfig.old
PWER_NIMBLE/: CMakeLists.txt  sdkconfig
P_MK_MODEM/: CMakeLists.txt  partitions.csv  partitions_4MB.csv
P_MK_MODEM/main/: CMakeLists.txt  json_parser.c  main.c  main.h  main_functions.c
P_MK_MODEM/main/BLE/: ble_MK115B.c  ble_ctrl_nec.h  gap.h  gatt_multi_con.c  gatt_multi_con.h
P_MK_MODEM/main/BLE/ONE/: gap.c  gap.h  gatt_cli.c  gatt_cli.h  task_ble.c
P_MK_MODEM/main/EG915/: EG915_modem.c  EG915_modem.h  credentials.h  errors_modem.h  modem_aux.c  modem_aux.h
P_MK_MODEM/main/LIBS/: SD_card_control.c  SD_card_control.h  nca9539.c  nca9539.h  uart_rs485.c  uart_rs485.h
P_MK_MODEM/main/OTA/: crc.c  crc.h  ota_control.c  ota_control.h  ota_esp32.c  ota_esp32.h  ota_global.c  ota_global.h  ota_headers.h  ota_modem.c  ota_modem.h
P_MK_MODEM/main/WIFI/: wifi_STA.c  wifi_confi.h  wifi_mqtt_tcp.c  wifi_ota_tcp.c
R485_SCANN/: CMakeLists.txt  partitions.csv
(+49 files in other folders)
